The Final modifications of Course Project 1

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
+title: 'Reproducible Research: Peer Assessment 1'
 output: 
-    html_document:
-    keep_md: true
+  html_document: 
+    keep_md: yes
 ---
 
-This assignment makes use of data from a personal activity monitoring device. This device collects data at 5 minute intervals through out the day. The data consists of two months of data from an anonymous individual collected during the months of October and November, 2012 and include the number of steps taken in 5 minute intervals each day.  
+*This assignment makes use of data from a personal activity monitoring device. This device collects data at 5 minute intervals through out the day. The data consists of two months of data from an anonymous individual collected during the months of October and November, 2012 and include the number of steps taken in 5 minute intervals each day.*  
 
 Activity.csv contains 3 variables:  
 
@@ -144,3 +144,4 @@ x<-ggplot(intervals_by_steps, aes(interval,steps))+
 print(x)
 ```
 
+------
